src/test/ui/static/safe-extern-statics-mut.mir.stderr
error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:13:13
   |
LL |     let b = B;
   |             ^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:14:14
   |
LL |     let rb = &B;
   |              ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:15:14
   |
LL |     let xb = XB;
   |              ^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/safe-extern-statics-mut.rs:16:15
   |
LL |     let xrb = &XB;
   |               ^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0133`.
